--- a/Azure/.env
+++ b/Azure/.env
@@ -1,4 +1,8 @@
 DB_USERNAME='user'
 DB_PASSWORD='user'
-DB_HOST='localhost:3306'
+DB_HOST='localhost'
 DB_DATABASE_NAME='snow_sercher'
+DB_PORT=3306
+
+MAIL_ADDRESS='tk210555yuki.enomoto@gmail.com'
+MAIL_PASSWORD='vcpe iins buht memy'
